# obelisk

./: .gitignore  README.md  io.github.srngh.obelisk.json  meson.build  org.gnome.obelisk.json  python3-bcrypt-req  python3-maturin.json  python3-netaddr.json  python3-paramiko-req  python3-paramiko.json  python3-pyyaml.json  python3-req.json  python3-requirements.json  requirements.txt
data/: io.github.srngh.obelisk.desktop.in  io.github.srngh.obelisk.gschema.xml  io.github.srngh.obelisk.metainfo.xml.in  io.github.srngh.obelisk.service.in  meson.build  org.gnome.obelisk.desktop.in  org.gnome.obelisk.gschema.xml  org.gnome.obelisk.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: config.yaml  config_loader.py  main.py  meson.build  ob_config.py  ob_list_view.py  obelisk.gresource.xml  obelisk.in  obeliskSSH.py  obelisk_list_view.py  window.blp  window.cmb  window.py  window.ui
src/config_file_handlers/: asbru_file_handler.py  config_file_handler.py  meson.build  obelisk_file_handler.py
src/config_loaders/: asbru_loader.py  config_loader.py  meson.build  obelisk_loader.py
src/gtk/: context-menu.blp  help-overlay.blp  ob_context_menu.blp  ob_new_item_dialog.blp  preferences.blp  preferences.ui  theme_switcher.blp
src/widgets/: interactive_shell.py  meson.build  ob_context_menu.py  ob_new_item_dialog.py  ob_term.py  ob_tree_expander.py  ob_tree_node.py  obelisk_context_menu.py  obelisk_new_item_dialog.py  obelisk_term.py  obelisk_tree_expander.py  obelisk_tree_widget.py  preferences.py  shell.py  sidebar_item.py  theme_switcher.py
